Fix issue 10
Issue: https://github.com/kintone/java-sdk/issues/10